Rename Lotus JS API -> Lotus JS Client

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@filecoin-shipyard/lotus-api-rpc",
+  "name": "@filecoin-shipyard/lotus-client-rpc",
   "version": "0.0.1",
-  "description": "Lotus JS API JSON-RPC query module",
+  "description": "Lotus JS Client JSON-RPC query module",
   "type": "module",
   "main": "client.js",
   "scripts": {
