--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.5",
   "description": "Lotus JS Client Web Browser Provider module",
   "type": "module",
+  "module": "index.js",
   "scripts": {
     "lint": "standard",
     "test": "npm run lint",
