Try out dual-publish

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@filecoin-shipyard/lotus-client-rpc",
+  "name": "@jimpick/lotus-client-rpc",
   "version": "0.0.8",
   "description": "Lotus JS Client Web Browser Provider module",
   "type": "module",
@@ -7,12 +7,14 @@
   "scripts": {
     "lint": "standard",
     "test": "npm run lint",
-    "prepublishOnly": "npm test"
+    "prepublishOnly": "npm test",
+    "dual-publish": "dual-publish"
   },
   "keywords": [],
   "author": "Jim Pick (@jimpick)",
   "license": "(Apache-2.0 AND MIT)",
   "devDependencies": {
+    "dual-publish": "^0.10.2",
     "standard": "^14.3.3"
   },
   "repository": {
