--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "(Apache-2.0 AND MIT)",
   "devDependencies": {
     "dual-publish": "^0.10.2",
+    "release-it": "^14.2.0",
     "standard": "^14.3.4"
   },
   "repository": {
