--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
     "lint": "standard",
     "test": "npm run lint",
     "prepublishOnly": "npm test",
-    "dual-publish": "release-it --no-npm.publish && dual-publish",
-    "dual-publish-check": "rm -rf dual-publish-tmp; dual-publish --check"
+    "dual-publish-prepare": "rm -rf dual-publish-tmp; dual-publish --check",
+    "build": "npm run dual-publish-prepare"
   },
   "keywords": [],
   "author": "Jim Pick (@jimpick)",
   "license": "(Apache-2.0 AND MIT)",
   "devDependencies": {
     "dual-publish": "^1.0.8",
-    "release-it": "^14.11.5",
     "standard": "^16.0.3"
   },
   "repository": {
@@ -24,5 +23,91 @@
   "bugs": {
     "url": "https://github.com/filecoin-shipyard/js-lotus-client-rpc/issues"
   },
-  "homepage": "https://github.com/filecoin-shipyard/js-lotus-client-rpc#readme"
+  "homepage": "https://github.com/filecoin-shipyard/js-lotus-client-rpc#readme",
+  "release": {
+    "branches": [
+      "master"
+    ],
+    "plugins": [
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "preset": "conventionalcommits",
+          "releaseRules": [
+            {
+              "breaking": true,
+              "release": "major"
+            },
+            {
+              "revert": true,
+              "release": "patch"
+            },
+            {
+              "type": "feat",
+              "release": "minor"
+            },
+            {
+              "type": "fix",
+              "release": "patch"
+            },
+            {
+              "type": "chore",
+              "release": "patch"
+            },
+            {
+              "type": "docs",
+              "release": "patch"
+            },
+            {
+              "type": "test",
+              "release": "patch"
+            },
+            {
+              "scope": "no-release",
+              "release": false
+            }
+          ]
+        }
+      ],
+      [
+        "@semantic-release/release-notes-generator",
+        {
+          "preset": "conventionalcommits",
+          "presetConfig": {
+            "types": [
+              {
+                "type": "feat",
+                "section": "Features"
+              },
+              {
+                "type": "fix",
+                "section": "Bug Fixes"
+              },
+              {
+                "type": "chore",
+                "section": "Trivial Changes"
+              },
+              {
+                "type": "docs",
+                "section": "Trivial Changes"
+              },
+              {
+                "type": "test",
+                "section": "Tests"
+              }
+            ]
+          }
+        }
+      ],
+      "@semantic-release/changelog",
+      [
+        "@semantic-release/npm",
+        {
+          "pkgRoot": "dist"
+        }
+      ],
+      "@semantic-release/github",
+      "@semantic-release/git"
+    ]
+  }
 }
