--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jest": "27.0.3",
     "@typescript-eslint/eslint-plugin": "5.5.0",
     "@typescript-eslint/parser": "5.5.0",
+    "@types/ws": "8.5.3",
     "eslint": "8.4.1",
     "eslint-config-eliassama": "1.3.2",
     "eslint-plugin-jest": "25.3.0",
@@ -46,5 +47,9 @@
   },
   "files": [
     "lib/*"
-  ]
+  ],
+  "dependencies": {
+    "comsvr-ast": "2.1.1",
+    "ws": "8.5.0"
+  }
 }
