feat: 增加 http 协议。 1. 增加 http 协议，同时兼容在 浏览器 和 node 端的 fetch 请求。 2. 调整对外暴露模式。 3. 增加 getHttpUrl 方法。

--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
   ],
   "dependencies": {
     "comsvr-ast": "2.1.1",
+    "comsvr-random": "^0.1.4",
+    "node-fetch": "3.2.3",
     "ws": "8.5.0"
   }
 }
