feat: 拆解 rpc 与 protocols。 1. 将 protocols 单独划为一个库。 2. 生成 rpc 的 schema 及 index 。 3. 修改 script、eslint 及 prettier。

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,9 +4,9 @@
   "endOfLine": "lf",
   "jsxSingleQuote": true,
   "printWidth": 80,
-  "quoteProps": "as-needed",
+  "quoteProps": "preserve",
   "semi": true,
-  "singleQuote": true,
+  "singleQuote": false,
   "tabWidth": 2,
   "trailingComma": "all",
   "useTabs": false
