--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
-  "name": "@bit-rainforest/lotus-client-rpc.js",
+  "name": "@bit-rainforest/filmeta-client-rpc.js",
   "version": "0.0.0",
-  "description": "FilMeta 2.0 RPC api js client",
+  "description": "FilMeta 2.0 RPC api js client.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "test": "jest --config jestconfig.json",
     "format": "prettier --write src/",
     "lint": "eslint src/",
-    "prebuild": "npm run format && npm run lint && git add -A src && rm -rf lib",
-    "build": "tsc",
-    "preversion": "npm run build",
     "patch": "npm version patch",
     "minor": "npm version minor",
     "major": "npm version major",
     "postversion": "git push && git push --tags",
-    "prepublishOnly": "npm run build",
     "version": "npm run format && git add -A src"
   },
-  "pre-commit": [
-    "build"
-  ],
+  "pre-commit": [],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bitrainforest/filmeta-client-rpc.js.git"
@@ -35,7 +29,6 @@
     "@types/jest": "27.0.3",
     "@typescript-eslint/eslint-plugin": "5.5.0",
     "@typescript-eslint/parser": "5.5.0",
-    "@types/ws": "8.5.3",
     "eslint": "8.4.1",
     "eslint-config-eliassama": "1.3.2",
     "eslint-plugin-jest": "25.3.0",
@@ -44,14 +37,5 @@
     "prettier": "2.5.1",
     "ts-jest": "27.1.1",
     "typescript": "4.5.2"
-  },
-  "files": [
-    "lib/*"
-  ],
-  "dependencies": {
-    "comsvr-ast": "2.1.1",
-    "comsvr-random": "^0.1.4",
-    "node-fetch": "3.2.3",
-    "ws": "8.5.0"
   }
 }
